--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <a routerLink="">HOME</a>
   </li>
   <li>
-    <a (click)="gotoAbout(47)">ABOUT</a>
+    <a routerLink="/characters">characters</a>
   </li> 
 </ul>
 
