--- a/src/app/characters/characters.component.html
+++ b/src/app/characters/characters.component.html
@@ -1,3 +1,5 @@
-<p>
-  characters works!
-</p>
+<div *ngIf="characters">
+  <p *ngFor="let character of characters">
+    {{character.name}}
+  </p>
+</div>
